# ScreenTranslator

./: .gitattributes  .gitignore  environment.yml  install.py  mser_detector.py  osd_test.py  pyproject.toml  requirements.txt  start.py  start_old.py
