[project]
name = "screentranslator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argostranslate>=1.9.6",
    "mss>=10.1.0",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.3.0",
    "pynput>=1.8.1",
    "pyside6>=6.9.2",
    "scikit-image>=0.25.2",
    "tesserocr>=2.8.0",
]
